[package]
name = "codex-launch"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.23", features = ["derive"] }
console = "0.15.8"
crossterm = "0.25.0"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
inquire = "0.7.5"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
time = { version = "0.3.36", features = ["parsing"] }
toml = "0.8.19"

[dev-dependencies]
tempfile = "3.12.0"
